tablet styling fixes complete. stat page web analytics graph going off page on tablet...

--- a/app/assets/stylesheets/employees.scss
+++ b/app/assets/stylesheets/employees.scss
@@ -144,9 +144,3 @@
 		width: 100%;
 	}
 }
-
-@media only screen and (max-device-width: 1024px) { /* Change to whatever media query you require */
-    .mobile-fix{
-        width: 20% !important;
-    }
-}
